# Exam_Quality_platform

./: .env.example  .gitignore  CLAUDE.md  CLAUDE_CODE_PROMPT.md  CONTRIBUTING.md  FILE_INVENTORY.md  LICENSE  PROJECT_SPEC.md  README.md  SECURITY.md  docker-compose.yml
backend/: Dockerfile  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_create_core_tables.py  0002_create_processing_events.py  0003_create_questions_and_evidence.py  0004_create_clos_topics_assessment_records.py  (+2 more)
backend/app/: main.py
backend/app/api/: analyses.py  (+3 more)
backend/tests/: clo_topic_pdf_fixtures.py  conftest.py  helpers.py  kb_fixtures.py  pdf_fixtures.py  rules_pdf_fixtures.py  test_analyses_api.py  test_capability_manifest.py  test_clo_topic_alignment.py  test_clo_topic_coverage.py  test_digital_pdf_extractor.py  test_digital_tp153_extractor.py  test_errors.py  test_extraction_persistence.py  test_extraction_pipeline.py  test_file_validation.py  test_findings_api.py  test_health.py  test_identity.py  test_kb_manifest.py  test_kb_normalization_and_hashing.py  test_kb_provenance.py  test_kb_repository.py  test_kb_schemas_and_validation.py  test_line_classification.py  test_m8_pipeline_integration.py  test_migrations.py  test_ocr_extraction.py  test_performance_non_blocking.py  test_processing_runner.py  test_questions_api.py  test_reanalysis_api.py  test_recommendations_api.py  test_reference_data.py  test_report_content.py  test_report_pdf.py  test_reports_api.py  test_rule_identifiers_kb_alignment.py  test_rule_references.py  test_rules_marks_total.py  (+13 more)
(+144 files in other folders)
